--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="1">
+    <meta name="description" content="Professional Photographer available for weddings and special events">
     <meta name="robots" content="index,follow">
-    <link rel="icon" href="">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Pattaya&family=Poppins:wght@400;500&display=swap"
-        rel="stylesheet">
-    <title>Elena Joy Photography</title>
+    <title>Elena Joy | Photographer</title>
 </head>
 
 <body>
