added the navigation and the content for the first section to the page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
 </head>
 
 <body>
+    <header class="main-head">
+        <nav>
+            <h1 id="logo">Elena Joy</h1>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="hero">
+            <h2>Elena Joy <br> Photography</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quisquam eligendi dolore reprehenderit
+                earum maxime delectus at impedit deleniti. Quo.</p>
+            <a href="#gallery">Gallery</a>
+        </section>
+    </main>
 
 </body>
 
