finished adding the html for the first section of the page

--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
 
     <main>
         <section class="hero">
-            <h2>Elena Joy <br> Photography</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quisquam eligendi dolore reprehenderit
-                earum maxime delectus at impedit deleniti. Quo.</p>
-            <a href="#gallery">Gallery</a>
+            <div class="hero-introduction">
+                <h2>Elena Joy <br> Photography</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quisquam eligendi dolore
+                    reprehenderit
+                    earum maxime delectus at impedit deleniti. Quo.</p>
+                <a href="#gallery">Gallery</a>
+            </div>
+            <div class="hero-images">
+                <img class="hero-elena" src="./img/elena-joy.png" alt="picture of elena joy">
+            </div>
         </section>
     </main>
 
