finished styling the first section of the page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <main>
         <section class="hero">
-            <div class="hero-introduction">
+            <div class="hero-introduction flex">
                 <h2>Elena Joy <br> Photography</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quisquam eligendi dolore
                     reprehenderit
@@ -33,6 +33,8 @@
             </div>
             <div class="hero-images">
                 <img class="hero-elena" src="./img/elena-joy.png" alt="picture of elena joy">
+                <img class="plant1 plant" src="./img/plant1.png" alt="">
+                <img class="plant2 plant" src="./img/plant2.png" alt="">
             </div>
         </section>
     </main>
