--- a/index.html
+++ b/index.html
@@ -43,6 +43,31 @@
                 <img class="plant2 plant" src="./img/plant2.png" alt="">
             </div>
         </section>
+
+        <section class="about">
+            <div class="about-image">
+                <h5>MINIMAL</h5>
+                <img src="./img/about-image.png" alt="portrait-picture">
+            </div>
+            <div class="about-text flex">
+                <h2>Elena Joy</h2>
+                <div class="about-life">
+                    <h3>My Life</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, odio fugiat itaque doloribus
+                        voluptatibus commodi reprehenderit dolor suscipit perspiciatis repudiandae?</p>
+                </div>
+                <div class="about-work">
+                    <h3>My Work</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, odio fugiat itaque doloribus
+                        voluptatibus commodi reprehenderit dolor suscipit perspiciatis repudiandae?</p>
+                </div>
+                <div class="about-contact">
+                    <h3>Get In Touch</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, odio fugiat itaque doloribus
+                        voluptatibus commodi reprehenderit dolor suscipit perspiciatis repudiandae?</p>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
